changed Collectors.toList to toList method